tests/negative_pomidory/test_marker_loop_emhancement.pomidor


--dvdvd
@feature    Reporting
@tcname     Jira-4543
@param      new_session, del_cookies, wait(3)
@data       test.csv
@url        https://www.youtube.com/watch?v=Hp_Eg8NMfT0
--Second Feature!!!
Tahen for granted and "her we go!" user is on he's big boots's Instagram landing page,
*CLICKOs on login_field and types #name_field
ans *type [['stosimon@gmail
vdvdgbfb]].com' in #name_field 'and *type [['third bodybuilder']] in #name_field
and *clickowski on the #back_home_button

